--- a/nodejs/views/index.ejs
+++ b/nodejs/views/index.ejs
@@ -3,6 +3,7 @@
     <title>hello node.js!</title>
   </head>
   <body>
+    I'm <span id="name"><%= name %></span>.<br />
     <form onsubmit="return send();">
       <input type="text" name="message" id="message"/>
       <input type="submit" />
