--- a/nodejs/views/index.ejs
+++ b/nodejs/views/index.ejs
@@ -17,7 +17,7 @@
       });
       function send() {
         var message = document.getElementById('message');
-        socket.send(document.getElementById(message.value);
+        socket.send(document.getElementById(message.value));
         message.value = '';
         return false;
       }
