--- a/nodejs/views/index.ejs
+++ b/nodejs/views/index.ejs
@@ -7,7 +7,7 @@
       <input type="text" name="message" id="message"/>
       <input type="submit" />
     </form>
-    <script type="text/javascript" src="/namehoge/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript">
       var socket = io.connect();
       socket.on('message', function(msg) {
